--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
       </div>
       <div>
         <h1>味噌煮込み</h1>
-        <p>麺が硬いのはしょうが無いです</p>
+        <p>麺が硬いのはしょうがない</p>
+        <p>しょうがは合うけど</p>
         <ul>
           <li>
             <a href="#">
